--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,19 +4,21 @@
 <footer class="section-footer border-top">
 	<div class="container">
 		<section class="footer-bottom border-top row">
-            <div class="col-md-2 text-md-right text-muted">
+            <div class="col-lg-2 col-md-3 col-2 text-md-right text-muted">
                 <a href="https://www.instagram.com/pheel_style">
                     <i style="font-size: 25px;color:coral;" class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
 			</div>
-			<div class="col-md-2">
-				<p class="text-muted"> وب پاتوق فیل استایل</p>
+			<div class="col-lg-2 col-md-3 col-5">
+				<p class="text-muted">وب پاتوق فیل استایل</p>
 			</div>
-			<div class="col-md-8 text-md-center">
-				<span  class="px-2">+134-666-4190</span>
-				<span  class="px-2">گیلان، تالش، خیابان معین، پاساژ کاسپین، طبقه دوم</span>
+			<div class="col-lg-4 col-md-5 col-5">
+				<span class="px-2">+134-666-4190</span>
 			</div>
+			<div class="col-lg-4 col-md-7 col-12 text-center">
+				<span class="px-2">گیلان، تالش، خیابان معین، پاساژ کاسپین، طبقه دوم</span>
+			</div>
+
 		</section>
 	</div><!-- //container -->
 </footer>
-<!-- ========================= FOOTER END // ========================= -->
