--- a/templates/emails/user_verification.html
+++ b/templates/emails/user_verification.html
@@ -1,9 +1,14 @@
 {% autoescape off %}
-سلام  {{user.lname}} {{user.fname}}!
-ظاهرا لحظاتی قبل اقدام به ساخت حساب کاربری توی فیل فمیلی کردی. این ایمیل صرفا برای تایید صحت آدرس ایمیلی که حین ثبت نام وارد کردی و فعال سازی حساب کاربری جدیدته.
-برای شروع فعال سازی برو به لینک زیر و به راحتی حسابتو فعال کن.
-
-http://{{domain}}{% url 'activate' uidb64=uid token=token %}
-
-اگر حساب کاربری جدیدی نساختی و حس میکنی درخواست فعال سازی از طرف تو نیست این ایمیل رو نادیده بگیر...
+<div dir="rtl" style="font-size: 20px; font-weight: bold">
+    سلام  {{user.lname}} {{user.fname}}! <br />
+    ظاهرا لحظاتی قبل اقدام به ساخت حساب کاربری توی فیل فمیلی کردی.
+    <br />
+    این ایمیل صرفا برای تایید صحت آدرس ایمیلی که حین ثبت نام وارد کردی و فعال سازی حساب کاربری جدیدته.
+    <br />
+    برای شروع فعال سازی برو به لینک زیر و به راحتی حسابتو فعال کن.
+    <br /> <br />
+    http://{{domain}}{% url 'activate' uidb64=uid token=token %}
+    <br /> <br />
+    اگر حساب کاربری جدیدی نساختی و حس میکنی درخواست فعال سازی از طرف تو نیست این ایمیل رو نادیده بگیر...
+</div>
 {% endautoescape %}
