--- a/templates/dashboard/change_pass.html
+++ b/templates/dashboard/change_pass.html
@@ -12,7 +12,8 @@
                         <header class="bg-transparent" style="z-index: 1">
                                 <div class="row">
                                     <div class="col-2">
-                                        <img src="{{ user.profile.avatar.url }}" alt="بارگذاری آواتار ناموفق بود!" width="96" height="96" style="border-radius: 50%;">
+                                        <img src="{% if user.profile.avatar %}{{ user.profile.avatar.url }}{% else %} {% static 'images/noavatar.jpeg' %}{% endif %}"
+                                            alt="بارگذاری آواتار ناموفق بود!" width="96" height="96" style="border-radius: 50%;">
                                     </div>
 
                                 </div>
