--- a/templates/emails/your_order.html
+++ b/templates/emails/your_order.html
@@ -1,7 +1,11 @@
 {% autoescape off %}
-سلام  {{user.lname}} {{user.fname}}!
-طی درخواستی که داشتی لینک بازیابی رمزشب رو برات فرستادیم.
-http://{{domain}}{% url 'reset_password_permission' uidb64=uid token=token %}
-
-اگر این درخواست از طرف تو نیست و یا اصلا خبر نداری چرا با این ایمیل مواجه شدی؛ صرفا این ایمیل رو نادیده بگیر...
+<div dir="rtl" style="font-size: 20px; font-weight: bold">
+    سلام  {{user.lname}} {{user.fname}}!
+    <br />
+    طی درخواستی که داشتی لینک بازیابی رمزشب رو برات فرستادیم.
+    <br /> <br />
+    http://{{domain}}{% url 'reset_password_permission' uidb64=uid token=token %}
+    <br /> <br />
+    اگر این درخواست از طرف تو نیست و یا اصلا خبر نداری چرا با این ایمیل مواجه شدی؛ صرفا این ایمیل رو نادیده بگیر...
+</div>
 {% endautoescape %}
