--- a/templates/personalization/order_admin_template.html
+++ b/templates/personalization/order_admin_template.html
@@ -19,8 +19,9 @@
         #btn-cancel:hover {
             background: darkred;
         }
-    </style>
 
+    </style>
+    {% include 'includes/toast.html' %}
     <div class="submit-row" style="text-align: center; margin: auto auto 1rem;">
         <input id="btn-verify" type="submit" name="btn_verify_order" value="تایید سفارش" />
         <input id="btn-cancel" type="submit" name="btn_cancel_order" value="رد کردن سفارش" />
