anonymous user bug fixed

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -13,7 +13,7 @@
 				<p class="text-muted">وب پاتوق فیل استایل</p>
 			</div>
 			<div class="col-lg-4 col-md-5 col-5">
-				<span class="px-2">+134-666-4190</span>
+				<span dir="ltr" class="px-2">+98 903 636 5133</span>
 			</div>
 			<div class="col-lg-4 col-md-7 col-12 text-center">
 				<span class="px-2">گیلان، تالش، خیابان معین، پاساژ کاسپین، طبقه دوم</span>
