--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -121,6 +121,10 @@
                             </div>
                         </div>
                     {% endif %}
+
+
+                    <!--
+                    ****** ADD PAGINATION TO THE STORE SECTION **********
                     <nav class="mt-4" aria-label="Page navigation sample">
                         <ul class="pagination">
                             <li class="page-item disabled"><a class="page-link" href="#">قبلی</a></li>
@@ -128,7 +132,7 @@
                             <li class="page-item"><a class="page-link" href="#">2</a></li>
                             <li class="page-item"><a class="page-link" href="#">بعدی</a></li>
                         </ul>
-                    </nav>
+                    </nav>-->
                 </main>
             </div>
         </div>
