email sending bug completely solved by using smtp (again) and enabling app passwords in gmail

--- a/templates/purchase/order.html
+++ b/templates/purchase/order.html
@@ -103,9 +103,9 @@
                                             <td>
                                                 <div class="price-wrap text-center">
                                                     <h4>
-                                                        <span class="mx-1 my-1 badge badge-pill badge-primary">{{ taken.total_price }}$</span>
+                                                        <span class="mx-1 my-1 badge badge-pill badge-primary">{{ taken.total_price }}</span>
                                                     </h4>
-                                                    <small class="text-muted"> {{ taken.product.price }}$ each </small>
+                                                    <small class="text-muted"> هر كالا {{ taken.product.price }}</small>
                                                 </div> <!-- price-wrap .// -->
                                             </td>
                                             <td>
