--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <!-- ========================= SECTION  ========================= -->
     <section class="section-name padding-y-sm">
         <div class="container">
-
+            {% include 'includes/toast.html' %}
             <header class="section-heading">
                 <a href="{% url 'store' %}" class="btn btn-outline-primary float-left">نمایش همه</a>
                 <h3 class="text-right section-title">{{ page_title }}</h3>
